# PDFind

./: README.md  checkboxDropdown.py  main.py  requirements.txt  tabView.py
PDFinder in C/: CMakeLists.txt  main.c  nuklear.h
PDFinder in C/resources/: nuklear_sdl_gl2.h
PDFinder in Python/: main.py
